[1.3.X] Reverted the change in r16684, which, while fixing an alignment issue in IE7 with the admin's "Save and continue editing" and "Save and add another" buttons, caused the swapping of those buttons' order. Thanks to jocmeh for the report. Refs #16852.
git-svn-id: http://code.djangoproject.com/svn/django/branches/releases/1.3.X@16834 bcc190cf-cafb-0310-a4f2-bffc1f526a37

--- a/django/contrib/admin/media/css/forms.css
+++ b/django/contrib/admin/media/css/forms.css
@@ -352,9 +352,3 @@ fieldset.monospace textarea {
 .empty-form {
     display: none;
 }
-
-/* IE7 specific bug fixes */
-
-.submit-row input {
-    float: right;
-}
